--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="#services">Услуги</a>
             <a href="#portfolio">Портфолио</a>
             <a href="#contacts">Контакты</a>
+            <a href="#about">О компании</a>
         </nav>
         <div>
             <a href="tel:+79039999900">+7 903 999-99-00</a>
