Replace 'Контакты' link with 'Компания' link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <a href="#services">Услуги</a>
             <a href="#portfolio">Портфолио</a>
-            <a href="#contacts">Контакты</a>
+            <a href="#about">Компания</a>
         </nav>
         <div>
             <a href="tel:+79039999900">+7 903 999-99-00</a>
