--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src='js/main.js'></script>
 </head>
 <body>
+    <h1>Смарт-Экспресс</h1>
     <header>
         <nav>
             <a href="#services">Услуги</a>
