--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div>
             <a href="tel:+79039999900">+7 903 999-99-00</a>
             <button>Заказать звонок</button>
+            <button>New button</button>
         </div>
     </header>
 </body>
