--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a href="tel:+79039999900">+7 903 999-99-00</a>
             <button>Заказать звонок</button>
             <button>New button</button>
+            <button>Cancel</button>
         </div>
     </header>
 </body>
