--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <a href="#services">Услуги</a>
-            <a href="#portfolio">Портфолио</a>
+            <a href="#portfolio">Портфолио2</a>
             <a href="#contacts">Контакты</a>
             <a href="#about">О компании</a>
         </nav>
