--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <button>New button</button>
             <button>Cancel</button>
         </div>
+        <div id="portfolio2"></div>
     </header>
 </body>
 </html>
