--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
             <a href="#about">О компании</a>
         </nav>
         <div>
-            <a href="tel:+79039999900">+7 903 999-99-00</a>
+            <a href="tel:+79039999911">+7 903 999-99-11</a>
             <button>Заказать звонок</button>
         </div>
+        <div>Описание компании</div>
     </header>
 </body>
 </html>
